updating file order and creating new homepage

--- a/index.html
+++ b/index.html
@@ -1,176 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevGuides</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="flower-icon-png.png" type="image/png">
+    <title>devGuides</title>
+    <link type="icon" href="/flower-icon-png.png" rel="icon">
 </head>
-
 <body>
-    <header>
-        <h1>DevGuides</h1>
-    </header>
-
-    <section>
-        <h2><a href="/src/Course1/introToSoftware.html" target="_blank">Introduction to Software Engineering</a></h2>
-        <ul>
-            <li>Describe software engineering, Software Development Lifecycle (SDLC), and software development tools,
-                technologies, and stacks.</li>
-            <li>List different types of programming languages and create basic programming constructs such as loops and
-                conditions using Python.</li>
-            <li>Outline approaches to application architecture and design, patterns, and deployment architectures.</li>
-            <li>Summarize the skills required in software engineering and describe the career options it provides.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2><a href="/src/Course2/introToTrifecta.html" target="_blank">Intro to HTML, CSS, & JavaScript</a></h2>
-        <ul>
-            <li>Describe the Web Application Development Ecosystem and terminology like front-end developer, back-end,
-                server-side, and full stack.</li>
-            <li>Identify the developer tools and integrated development environments (IDEs) used by web developers.</li>
-            <li>Create and structure basic web pages using HTML and style them with CSS.</li>
-            <li>Develop dynamic web pages with interactive features using JavaScript.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2><a href="/src/Course3/gitHub.html" target="_blank">Getting Started with Git and GitHub</a></h2>
-        <ul>
-            <li>Describe version control and its place in social and collaborative coding and in DevOps.</li>
-            <li>Explain basic Git concepts such as repositories and branches used for distributed version control and
-                social coding.</li>
-            <li>Create GitHub repositories and branches, and perform pull requests (PRs) and merge operations, to
-                collaborate on a team project.</li>
-            <li>Build your portfolio by creating and sharing an open-source project on GitHub.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2><a href="/src/Course4/javascriptEssentials.html" target="_blank">JavaScript Programming Essentials</a></h2>
-        <ul>
-            <li>Describe JavaScript development concepts, list ES6 features, outline data structures, and explore
-                arrays, DOM, AJAX, and debugging techniques.</li>
-            <li>Explore handling errors and exceptions, functions and events, apply string manipulation and
-                error-handling techniques, and traverse the DOM.</li>
-            <li>Compare functions, values, reference types, and strategies in promises and async/await, and discuss
-                modifying the appearance of DOM elements.</li>
-            <li>Employ JavaScript functions, services, tools, and libraries to create and style navigation and pages,
-                and AJAX to fetch and display data from APIs.</li>
-        </ul>
-    </section>
-
-    <section>
-    <h2><a href="/src/Course5/reactDevelopment.html" target="_blank">Developing Front-End Apps with React</a></h2>
-        <ul>
-            <li>Develop interactive user interfaces (UIs) and web applications using JavaScript technologies including
-                React, JSX, and ES6.</li>
-            <li>Build dynamic front-end applications quickly and easily with reusable React components.</li>
-            <li>Employ various React concepts and features, including props, states, hooks, forms, and Redux.</li>
-            <li>Demonstrate your React skills by building several front-end applications such as a shopping cart.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2><a href="/src/Course6/nodeExpress.html" target="_blank">Developing Back-End Apps with Node.js and Express</a></h2>
-        <ul>
-            <li>Create server-side applications using the Node.js JavaScript runtime.</li>
-            <li>Extend your Node.js applications with third-party packages and frameworks, including Express.</li>
-            <li>Use npm to manage Node.js packages in your Node.js application.</li>
-            <li>Develop asynchronous callback functions and promises to complete asynchronous operations.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2><a href="/src/Course7/cloudDevOps.html" target="_blank">Get Started With Cloud Native, DevOps, and NoSQL</a></h2>
-        <ul>
-            <li>Explore cloud-native applications concepts and methodologies, recognize CNCF’s impact, and analyze the
-                benefits of CI/CD, Agile, and Scrum.</li>
-            <li>Recognize the DevOps culture, and its significance, differentiate between TDD and BDD, and explore the
-                principles and characteristics of MongoDB.</li>
-            <li>Implement CI/CD practices and connect and integrate user stories using Zenhub to facilitate the Agile
-                development process.</li>
-            <li>Enhance application functionality using tools and techniques, store, manage, and perform basic data
-                operations using MongoDB and CRUD operations.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2><a href="/src/Course8/dockerKubernetes.html" target="_blank">Introduction to Containers with Docker, Kubernetes & OpenShift</a></h2>
-        <ul>
-            <li>Using containers, learn how to move applications quickly across any environment.</li>
-            <li>Build cloud-native applications using Docker, Kubernetes, OpenShift, and Istio.</li>
-            <li>Describe and leverage Kubernetes architecture to set up and use an entire lifecycle-based container
-                management system.</li>
-            <li>Create and leverage a YAML deployment file to configure and create resources such as pods, services,
-                replicasets, and others in a declarative way.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2><a href="/src/Course9/microservices.html" target="_blank">Application Development using Microservices and Serverless</a></h2>
-        <ul>
-            <li>Summarize the fundamentals of Microservices, their advantages, and contrast with monolithic
-                architectures.</li>
-            <li>Create REST API endpoints and invoke them using cURL and Postman; Use SwaggerUI to document and test
-                APIs.</li>
-            <li>Create and deploy microservices using Docker containers and serverless technologies like IBM Code
-                Engine.</li>
-            <li>Practice hands-on with labs and projects using a no-charge cloud-based environment.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2><a href="/src/Course10/nodeMongoDB.html" target="_blank">Node.js & MongoDB: Developing Back-end Database Applications</a></h2>
-        <ul>
-            <li>Implement fundamental back-end development concepts with Node, Express, and NoSQL databases.</li>
-            <li>Develop secure RESTful APIs using Node and Express to communicate with databases.</li>
-            <li>Apply authentication and authorization mechanisms and implement error handling.</li>
-            <li>Scale and deploy Node database applications on a cloud platform.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2><a href="/src/Course11/fullStackProject.html" target="_blank">JavaScript Full Stack Capstone Project</a></h2>
-        <ul>
-            <li>Integrate and apply your JavaScript, React, Node.js, Express, and MongoDB skills.</li>
-            <li>Build a real-world web application using front-end and back-end technologies.</li>
-            <li>Deploy your full-stack web application on the cloud using containers and serverless technologies.</li>
-            <li>Apply DevOps and Agile practices by employing CI/CD pipelines and developing user stories.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2><a href="/src/Course12/careerGuide.html" target="_blank">Software Developer Career Guide and Interview Preparation</a></h2>
-        <ul>
-            <li>Describe the role of a software engineer and some career path options as well as the prospective
-                opportunities in the field.</li>
-            <li>Explain how to build a foundation for a job search, including researching job listings, writing a
-                resume, and making a portfolio of work.</li>
-            <li>Summarize what a candidate can expect during a typical job interview cycle, different types of
-                interviews, and how to prepare for interviews.</li>
-            <li>Explain how to give an effective interview, including techniques for answering questions and how to make
-                a professional personal presentation.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>Additional Resources</h2>
-        <ul>
-            <li>Complete <a href="https://www.freecodecamp.org/learn/full-stack-developer/">Full-Stack Developer Guide</a></li>
-            <li>Use <a href="https://leetcode.com/problems/create-hello-world-function/description/?envType=study-plan-v2&envId=30-days-of-javascript" target="_blank">Leetcode for learning.</a></li>
-            <li>Watch <a href="https://www.youtube.com/watch?v=TG6XSFeOT3g">programmers</a>, and <a href="https://www.youtube.com/watch?v=erEgovG9WBs">get the gist of web development</a>.</li>
-        </ul>
-    </section>
-
-    <footer>
-        <p>© 2025 VanillaScript. All rights reserved.</p>
-    </footer>
-
-    <script src="script.js"></script>
+    <h1>Placeholder</h1>
+    <script src="/script.js"></script>
 </body>
-
 </html>
