--- a/src/Course1/introToSoftware.html
+++ b/src/Course1/introToSoftware.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intro to Software Engineering</title>
     <link rel="stylesheet" href="/src/srcStyles.css">
+    <link type="icon" href="/flower-icon-png.png" rel="icon">
 </head>
 <body>
     <h1>Intro To Software Engineering</h1>
