--- a/src/Course12/careerGuide.html
+++ b/src/Course12/careerGuide.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>careerGuide</title>
     <link rel="stylesheet" href="/src/srcStyles.css">
+    <link type="icon" href="/flower-icon-png.png" rel="icon">
 </head>
 <body>
     <h1>Software Developer Career Guide and Interview Preparation</h1>
