--- a/src/Course5/reactDevelopment.html
+++ b/src/Course5/reactDevelopment.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React Development</title>
     <link rel="stylesheet" href="/src/srcStyles.css">
+    <link type="icon" href="/flower-icon-png.png" rel="icon">
 </head>
 
 <body>
