--- a/src/Course10/nodeMongoDB.html
+++ b/src/Course10/nodeMongoDB.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>nodeMongoDB</title>
     <link rel="stylesheet" href="/src/srcStyles.css">
+    <link type="icon" href="/flower-icon-png.png" rel="icon">
 </head>
 <body>
     <h1>Node.js & MongoDB: Developing Back-end Database Application</h1>
