--- a/src/Course2/introToTrifecta.html
+++ b/src/Course2/introToTrifecta.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intro To HTML, CSS, and JS</title>
     <link rel="stylesheet" href="/src/srcStyles.css">
+    <link type="icon" href="/flower-icon-png.png" rel="icon">
 </head>
 
 <body>
