--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>devGuides</title>
+    <title>Homepage</title>
     <link type="icon" href="/flower-icon-png.png" rel="icon">
 </head>
 <body>
-    <h1>Placeholder</h1>
+    <h1>Welcome!</h1>
     <script src="/script.js"></script>
 </body>
 </html>
