--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Welcome!</h1>
+    <p>Check out <a href="/src/devGuides/devGuides.html">my web development course.</a></p>
     <script src="/script.js"></script>
 </body>
 </html>
