updated: index.html & added: about.html & contact.html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     <link type="icon" href="/flower-icon-png.png" rel="icon">
 </head>
 <body>
-    <h1>Welcome!</h1>
+    <header>
+        <h1>Welcome!</h1>
+        <nav>
+            <ul>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/src/homePage/about.html">About</a></li>
+                <li><a href="/src/homePage/contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <h2>About Me</h2>
+        <p>Hello! I'm a web developer with a passion for creating beautiful and functional websites.</p>
     <p>Check out <a href="/src/devGuides/devGuides.html">my web development course.</a></p>
     <script src="/script.js"></script>
 </body>
