updated: index.html

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
         </nav>
     </header>
     <main>
-        <h2>About Me</h2>
-        <p>Hello! I'm a web developer with a passion for creating beautiful and functional websites.</p>
-    <p>Check out <a href="/src/devGuides/devGuides.html">my web development course.</a></p>
+        <p>Check out <a href="/src/devGuides/devGuides.html">my web development course.</a></p>
+    </main>
     <script src="/script.js"></script>
 </body>
 </html>
