adding nav and main

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="/src/homePage/about.html">About</a></li>
                 <li><a href="/src/homePage/contact.html">Contact</a></li>
+                <li><a href="/src/devGuides/devGuides.html">devGuides</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <p>Check out <a href="/src/devGuides/devGuides.html">my web development course.</a></p>
+        <h2>What I do:</h2>
+        <p>I utilize these technologies to build web applications.</p>
     </main>
     <script src="/script.js"></script>
 </body>
