adding What I Do Section

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <main>
         <h2>What I do:</h2>
         <p>I utilize these technologies to build web applications.</p>
+        <p>html, css, js, git, vercel</p>
     </main>
     <script src="/script.js"></script>
 </body>
