--- a/index.html
+++ b/index.html
@@ -3,26 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Homepage - Web Technologies Showcase</title>
     <link type="icon" href="/flower-icon-png.png" rel="icon">
+    <link rel="stylesheet" href="/styles.css"> <!-- Link to your external CSS file -->
 </head>
 <body>
     <header>
-        <h1>Welcome!</h1>
-        <nav>
-            <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/src/homePage/about.html">About</a></li>
-                <li><a href="/src/homePage/contact.html">Contact</a></li>
-                <li><a href="/src/devGuides/devGuides.html">devGuides</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Welcome to My Web Showcase</h1>
+            <nav>
+                <ul>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/src/homePage/about.html">About</a></li>
+                    <li><a href="/src/homePage/contact.html">Contact</a></li>
+                    <li><a href="/src/devGuides/devGuides.html">Dev Guides</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
+
     <main>
-        <h2>What I do:</h2>
-        <p>I utilize these technologies to build web applications.</p>
-        <p>html, css, js, git, vercel</p>
+        <section class="intro">
+            <h2>What I Do</h2>
+            <p>Explore how I build modern web applications using cutting-edge technologies:</p>
+            <div class="technologies">
+                <div class="tech-box">
+                    <h3>HTML</h3>
+                    <p>The backbone of all websites. I create structured, semantic content.</p>
+                </div>
+                <div class="tech-box">
+                    <h3>CSS</h3>
+                    <p>Transforming simple pages into beautifully designed interfaces.</p>
+                </div>
+                <div class="tech-box">
+                    <h3>JavaScript</h3>
+                    <p>Adding interactivity and functionality to create dynamic user experiences.</p>
+                </div>
+                <div class="tech-box">
+                    <h3>Git</h3>
+                    <p>Version control for collaboration and version management.</p>
+                </div>
+                <div class="tech-box">
+                    <h3>Vercel</h3>
+                    <p>Deploying websites for the world to see. Instant, scalable hosting.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="demo">
+            <h2>Interactive Demo</h2>
+            <p>See what HTML, CSS, and JavaScript can do! Below is an example of a simple interactive feature.</p>
+            <button id="changeColorBtn">Change Background Color</button>
+        </section>
     </main>
+
+    <footer>
+        <p>&copy; 2025 My Website. All rights reserved.</p>
+    </footer>
+
     <script src="/script.js"></script>
 </body>
 </html>
