confirming icon loading

--- a/src/Course11/fullStackProject.html
+++ b/src/Course11/fullStackProject.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fullStack Project</title>
     <link rel="stylesheet" href="/src/srcStyles.css">
+    <link type="icon" href="/files/flower-icon-png.png" rel="icon">
 </head>
 <body>
     <h1>JavaScript Full Stack Capstone Project</h1>
