--- a/src/devGuides/devGuides.html
+++ b/src/devGuides/devGuides.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevGuides</title>
     <link rel="stylesheet" href="/src/devGuides/styles.css">
-    <link rel="icon" href="flower-icon-png.png" type="image/png">
+    <link type="icon" href="/files/flower-icon-png.png" rel="icon">
 </head>
 
 <body>
