--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage - Web Technologies Showcase</title>
-    <link type="icon" href="/flower-icon-png.png" rel="icon">
+    <link type="icon" href="/files/flower-icon-png.png" rel="icon">
     <link rel="stylesheet" href="/styles.css"> <!-- Link to your external CSS file -->
 </head>
 <body>
@@ -56,7 +56,7 @@
             <button id="changeColorBtn">Change Background Color</button>
         </section>
     </main>
-
+    <br>
     <footer>
         <p>&copy; 2025 My Website. All rights reserved.</p>
     </footer>
