--- a/src/Course7/cloudDevOps.html
+++ b/src/Course7/cloudDevOps.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cloudDevOps</title>
     <link rel="stylesheet" href="/src/srcStyles.css">
-    <link type="icon" href="/flower-icon-png.png" rel="icon">
+    <link type="icon" href="/files/flower-icon-png.png" rel="icon">
 </head>
 
 <body>
