update: index.html & styles.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage - Web Technologies Showcase</title>
+    <meta name="description" content="A showcase of web technologies (HTML, CSS, JavaScript) with interactive demos and more.">
+    <meta property="og:image" content="/files/flower-icon-png.png">
+    <title>Homepage - JCGV</title>
     <link type="icon" href="/files/flower-icon-png.png" rel="icon">
     <link rel="stylesheet" href="/styles.css"> <!-- Link to your external CSS file -->
 </head>
@@ -56,9 +58,9 @@
             <button id="changeColorBtn">Change Background Color</button>
         </section>
     </main>
-    <br>
+
     <footer>
-        <p>&copy; 2025 My Website. All rights reserved.</p>
+        <p>&copy; 2025 <a href="https://www.linkedin.com/camilogomezvalencia">fullstacknyc</a>. All rights reserved.</p>
     </footer>
 
     <script src="/script.js"></script>
