attempting infinite scroll for .tech-box sections

--- a/index.html
+++ b/index.html
@@ -28,26 +28,49 @@
         <section class="intro">
             <h2>What I Do</h2>
             <p>Explore how I build modern web applications using cutting-edge technologies:</p>
-            <div class="technologies">
-                <div class="tech-box">
-                    <h3>HTML</h3>
-                    <p>The backbone of all websites. I create structured, semantic content.</p>
-                </div>
-                <div class="tech-box">
-                    <h3>CSS</h3>
-                    <p>Transforming simple pages into beautifully designed interfaces.</p>
-                </div>
-                <div class="tech-box">
-                    <h3>JavaScript</h3>
-                    <p>Adding interactivity and functionality to create dynamic user experiences.</p>
-                </div>
-                <div class="tech-box">
-                    <h3>Git</h3>
-                    <p>Version control for collaboration and version management.</p>
-                </div>
-                <div class="tech-box">
-                    <h3>Vercel</h3>
-                    <p>Deploying websites for the world to see. Instant, scalable hosting.</p>
+            <div class="tech-boxes-wrapper">
+                <div class="tech-boxes-container">
+                    <div class="tech-box">
+                        <h3>HTML</h3>
+                        <p>The backbone of all websites. I create structured, semantic content.</p>
+                    </div>
+                    <div class="tech-box">
+                        <h3>CSS</h3>
+                        <p>Transforming simple pages into beautifully designed interfaces.</p>
+                    </div>
+                    <div class="tech-box">
+                        <h3>JavaScript</h3>
+                        <p>Adding interactivity and functionality to create dynamic user experiences.</p>
+                    </div>
+                    <div class="tech-box">
+                        <h3>Git</h3>
+                        <p>Version control for collaboration and version management.</p>
+                    </div>
+                    <div class="tech-box">
+                        <h3>Vercel</h3>
+                        <p>Deploying websites for the world to see. Instant, scalable hosting.</p>
+                    </div>
+                    <!-- Duplicate the tech-boxes to create an infinite loop -->
+                    <div class="tech-box">
+                        <h3>HTML</h3>
+                        <p>The backbone of all websites. I create structured, semantic content.</p>
+                    </div>
+                    <div class="tech-box">
+                        <h3>CSS</h3>
+                        <p>Transforming simple pages into beautifully designed interfaces.</p>
+                    </div>
+                    <div class="tech-box">
+                        <h3>JavaScript</h3>
+                        <p>Adding interactivity and functionality to create dynamic user experiences.</p>
+                    </div>
+                    <div class="tech-box">
+                        <h3>Git</h3>
+                        <p>Version control for collaboration and version management.</p>
+                    </div>
+                    <div class="tech-box">
+                        <h3>Vercel</h3>
+                        <p>Deploying websites for the world to see. Instant, scalable hosting.</p>
+                    </div>
                 </div>
             </div>
         </section>
