--- a/index.html
+++ b/index.html
@@ -3,64 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A showcase of web technologies (HTML, CSS, JavaScript) with interactive demos and more.">
-    <meta property="og:image" content="/files/flower-icon-png.png">
     <title>Homepage - JCGV</title>
-    <link type="icon" href="/files/flower-icon-png.png" rel="icon">
-    <link rel="stylesheet" href="/styles.css"> <!-- Link to your external CSS file -->
+    <link href="/files/flower-icon-png.png" rel="icon">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Welcome to My Web Showcase</h1>
-            <nav>
-                <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/src/homePage/about.html">About</a></li>
-                    <li><a href="/src/homePage/contact.html">Contact</a></li>
-                    <li><a href="/src/devGuides/devGuides.html">Dev Guides</a></li>
-                </ul>
-            </nav>
-        </div>
+        <h1>Welcome to My Web Showcase</h1>
+        <nav>
+            <ul>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/src/homePage/about.html">About</a></li>
+                <li><a href="/src/homePage/contact.html">Contact</a></li>
+                <li><a href="/src/devGuides/devGuides.html">Dev Guides</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
         <section class="intro">
             <h2>What I Do</h2>
-            <p>Explore how I build modern web applications using cutting-edge technologies:</p>
             <div class="tech-boxes-wrapper">
                 <div class="tech-boxes-container">
-                    <div class="tech-box">
-                        <h3>HTML</h3>
-                        <p>The backbone of all websites. I create structured, semantic content.</p>
-                    </div>
-                    <div class="tech-box">
-                        <h3>CSS</h3>
-                        <p>Transforming simple pages into beautifully designed interfaces.</p>
-                    </div>
-                    <div class="tech-box">
-                        <h3>JavaScript</h3>
-                        <p>Adding interactivity and functionality to create dynamic user experiences.</p>
-                    </div>
-                    <div class="tech-box">
-                        <h3>Git</h3>
-                        <p>Version control for collaboration and version management.</p>
-                    </div>
-                    <div class="tech-box">
-                        <h3>Vercel</h3>
-                        <p>Deploying websites for the world to see. Instant, scalable hosting.</p>
-                    </div>
+                    <div class="tech-box"><h3>HTML</h3><p>Structured content.</p></div>
+                    <div class="tech-box"><h3>CSS</h3><p>Beautiful design.</p></div>
+                    <div class="tech-box"><h3>JavaScript</h3><p>Interactive features.</p></div>
+                    <div class="tech-box"><h3>Git</h3><p>Version control.</p></div>
+                    <div class="tech-box"><h3>Vercel</h3><p>Scalable hosting.</p></div>
                 </div>
             </div>
         </section>
 
         <section class="demo">
-            <h2>Interactive Demo</h2>
-            <p>See what HTML, CSS, and JavaScript can do! Below is an example of a simple interactive feature.</p>
             <button id="changeColorBtn">Change Background Color</button>
         </section>
     </main>
-    <br>
+
     <footer>
         <p>&copy; 2025 <a href="https://www.linkedin.com/camilogomezvalencia">fullstacknyc</a>. All rights reserved.</p>
     </footer>
