--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
 
         <section class="demo">
-            <button id="changeColorBtn">Change Background Color</button>
+            <button id="changeColorBtn" aria-label="Change background color">Change Background Color</button>
         </section>
     </main>
 
