--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Web showcase by JCGV, featuring HTML, CSS, JavaScript, and Git tutorials.">
     <title>Homepage - JCGV</title>
     <link href="/files/flower-icon-png.png" rel="icon">
     <link rel="stylesheet" href="/styles.css">
@@ -12,10 +13,10 @@
         <h1>Welcome to My Web Showcase</h1>
         <nav>
             <ul>
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/src/homePage/about.html">About</a></li>
-                <li><a href="/src/homePage/contact.html">Contact</a></li>
-                <li><a href="/src/devGuides/devGuides.html">Dev Guides</a></li>
+                <li><a href="/index.html" aria-label="Home">Home</a></li>
+                <li><a href="/src/homePage/about.html" aria-label="About">About</a></li>
+                <li><a href="/src/homePage/contact.html" aria-label="Contact">Contact</a></li>
+                <li><a href="/src/devGuides/devGuides.html" aria-label="Developer Guides">Dev Guides</a></li>
             </ul>
         </nav>
     </header>
@@ -40,7 +41,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 <a href="https://www.linkedin.com/camilogomezvalencia">fullstacknyc</a>. All rights reserved.</p>
+        <p>&copy; 2025 <a href="https://www.linkedin.com/camilogomezvalencia" aria-label="FullstackNYC LinkedIn">fullstacknyc</a>. All rights reserved.</p>
     </footer>
 
     <script src="/script.js"></script>
