--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Web showcase by JCGV, featuring HTML, CSS, JavaScript, and Git tutorials.">
+    <meta name="description" content="Web showcase featuring HTML, CSS, JavaScript, and Git tutorials.">
     <title>Homepage - JCGV</title>
     <link href="/files/flower-icon-png.png" rel="icon">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -14,9 +14,9 @@
         <nav>
             <ul>
                 <li><a href="/index.html" aria-label="Home">Home</a></li>
-                <li><a href="/src/homePage/about.html" aria-label="About">About</a></li>
-                <li><a href="/src/homePage/contact.html" aria-label="Contact">Contact</a></li>
-                <li><a href="/src/devGuides/devGuides.html" aria-label="Developer Guides">Dev Guides</a></li>
+                <li><a href="/about.html" aria-label="About">About</a></li>
+                <li><a href="/contact.html" aria-label="Contact">Contact</a></li>
+                <li><a href="/dev-guides.html" aria-label="Developer Guides">Dev Guides</a></li>
             </ul>
         </nav>
     </header>
@@ -40,6 +40,6 @@
         <p>&copy; 2025 <a href="https://www.linkedin.com/camilogomezvalencia" aria-label="FullstackNYC LinkedIn">fullstacknyc</a>. All rights reserved.</p>
     </footer>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
