trying to simplify code

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Web showcase featuring HTML, CSS, JavaScript, and Git tutorials.">
     <title>Homepage - JCGV</title>
     <link href="/files/flower-icon-png.png" rel="icon">
     <link rel="stylesheet" href="styles.css">
@@ -13,10 +12,10 @@
         <h1>Welcome to My Web Showcase</h1>
         <nav>
             <ul>
-                <li><a href="/index.html" aria-label="Home">Home</a></li>
-                <li><a href="/about.html" aria-label="About">About</a></li>
-                <li><a href="/contact.html" aria-label="Contact">Contact</a></li>
-                <li><a href="/dev-guides.html" aria-label="Developer Guides">Dev Guides</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/homePage/about.html">About</a></li>
+                <li><a href="/homePage/contact.html">Contact</a></li>
+                <li><a href="/homePage/dev-guides.html">Dev Guides</a></li>
             </ul>
         </nav>
     </header>
@@ -24,20 +23,18 @@
     <main>
         <section class="intro">
             <h2>What I Do</h2>
-            <div class="tech-boxes-wrapper">
-                <div class="tech-boxes-container">
-                    <div class="tech-box"><h3>HTML</h3><p>Structured content.</p></div>
-                    <div class="tech-box"><h3>CSS</h3><p>Beautiful design.</p></div>
-                    <div class="tech-box"><h3>JavaScript</h3><p>Interactive features.</p></div>
-                    <div class="tech-box"><h3>Git</h3><p>Version control.</p></div>
-                    <div class="tech-box"><h3>Vercel</h3><p>Scalable hosting.</p></div>
-                </div>
+            <div class="tech-boxes-container">
+                <div class="tech-box">HTML</div>
+                <div class="tech-box">CSS</div>
+                <div class="tech-box">JavaScript</div>
+                <div class="tech-box">Git</div>
+                <div class="tech-box">Vercel</div>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 <a href="https://www.linkedin.com/camilogomezvalencia" aria-label="FullstackNYC LinkedIn">fullstacknyc</a>. All rights reserved.</p>
+        <p>&copy; 2025 <a href="https://www.linkedin.com/camilogomezvalencia">fullstacknyc</a>. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
