--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
         <section class="intro">
-            <h2>What I Do</h2>
+            <h2>Tech Stacks</h2>
             <div class="tech-boxes-wrapper">
                 <div class="tech-boxes-container">
                     <div class="tech-box"><h3>HTML</h3><p>Structured content.</p></div>
