--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="/index.html" aria-label="Home">Home</a></li>
                 <li><a href="/homePage/about.html" aria-label="About">About</a></li>
                 <li><a href="/homePage/contact.html" aria-label="Contact">Contact</a></li>
-                <li><a href="/homePage/dev-guides.html" aria-label="Developer Guides">Dev Guides</a></li>
+                <li><a href="/src/homePage/dev-guides.html" aria-label="Developer Guides">Dev Guides</a></li>
             </ul>
         </nav>
     </header>
