--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <nav>
             <ul>
                 <li><a href="/index.html" aria-label="Home">Home</a></li>
-                <li><a href="/homePage/about.html" aria-label="About">About</a></li>
-                <li><a href="/homePage/contact.html" aria-label="Contact">Contact</a></li>
-                <li><a href="/homePage/dev-guides.html" aria-label="Developer Guides">Dev Guides</a></li>
+                <li><a href="/src/homePage/about.html" aria-label="About">About</a></li>
+                <li><a href="/src/homePage/contact.html" aria-label="Contact">Contact</a></li>
+                <li><a href="/src/devGuides/devGuides.html" aria-label="Developer Guides">Dev Guides</a></li>
             </ul>
         </nav>
     </header>
