AI filling contact and about htmls

--- a/src/homePage/about.html
+++ b/src/homePage/about.html
@@ -1,11 +1,42 @@
+<!-- about.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <meta name="description" content="Learn more about the purpose and creator of this web showcase.">
+    <title>About - JCGV</title>
+    <link href="/files/flower-icon-png.png" rel="icon">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>placeholder</h1>
+    <header>
+        <h1>About This Web Showcase</h1>
+        <nav>
+            <ul>
+                <li><a href="/index.html" aria-label="Home">Home</a></li>
+                <li><a href="/src/homePage/about.html" aria-label="About">About</a></li>
+                <li><a href="/src/homePage/contact.html" aria-label="Contact">Contact</a></li>
+                <li><a href="/src/devGuides/devGuides.html" aria-label="Developer Guides">Dev Guides</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="intro">
+            <h2>Who We Are</h2>
+            <p>Welcome to JCGV, a curated web showcase dedicated to providing insights into essential web development technologies.</p>
+            <p>We cover a range of topics including HTML, CSS, JavaScript, Git, and modern hosting solutions.</p>
+        </section>
+
+        <section>
+            <h2>Our Mission</h2>
+            <p>Our goal is to make web development more accessible by offering clean, structured examples and guides.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 <a href="https://www.linkedin.com/camilogomezvalencia" aria-label="FullstackNYC LinkedIn">fullstacknyc</a>. All rights reserved.</p>
+    </footer>
 </body>
 </html>
