--- a/src/homePage/contact.html
+++ b/src/homePage/contact.html
@@ -1,11 +1,45 @@
+<!-- contact.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me</title>
+    <meta name="description" content="Get in touch with the creator of this web showcase.">
+    <title>Contact - JCGV</title>
+    <link href="/files/flower-icon-png.png" rel="icon">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <h1>placeholder</h1>
+    <header>
+        <h1>Contact Me</h1>
+        <nav>
+            <ul>
+                <li><a href="/index.html" aria-label="Home">Home</a></li>
+                <li><a href="/src/homePage/about.html" aria-label="About">About</a></li>
+                <li><a href="/src/homePage/contact.html" aria-label="Contact">Contact</a></li>
+                <li><a href="/src/devGuides/devGuides.html" aria-label="Developer Guides">Dev Guides</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="intro">
+            <h2>Get in Touch</h2>
+            <p>Have any questions, feedback, or collaboration ideas? Feel free to reach out.</p>
+        </section>
+
+        <section>
+            <h2>Contact Details</h2>
+            <ul>
+                <li>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/camilogomezvalencia" target="_blank">LinkedIn Profile</a></li>
+                <li>GitHub: <a href="https://github.com/yourgithubprofile" target="_blank">GitHub Profile</a></li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 <a href="https://www.linkedin.com/camilogomezvalencia" aria-label="FullstackNYC LinkedIn">fullstacknyc</a>. All rights reserved.</p>
+    </footer>
 </body>
 </html>
