--- a/src/homePage/contact.html
+++ b/src/homePage/contact.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Get in touch with the creator of this web showcase.">
     <title>Contact - JCGV</title>
     <link href="/files/flower-icon-png.png" rel="icon">
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="src/homePage/styles.css">
 </head>
 <body>
     <header>
