--- a/src/homePage/about.html
+++ b/src/homePage/about.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Learn more about the purpose and creator of this web showcase.">
     <title>About - JCGV</title>
     <link href="/files/flower-icon-png.png" rel="icon">
-    <link rel="stylesheet" href="src/homePage/styles.css">
+    <link rel="stylesheet" href="/src/homePage/styles.css">
 </head>
 <body>
     <header>
