--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="/index.html" aria-label="Home">Home</a></li>
                 <li><a href="/src/homePage/about.html" aria-label="About">About</a></li>
                 <li><a href="/src/homePage/contact.html" aria-label="Contact">Contact</a></li>
+                <li><a href="/src/homePage/services.html" aria-label="Services">Services</a></li>
                 <li><a href="/src/devGuides/devGuides.html" aria-label="Developer Guides">Dev Guides</a></li>
             </ul>
         </nav>
@@ -34,6 +35,15 @@
                     <div class="tech-box"><h3>Vercel</h3><p>Scalable hosting.</p></div>
                 </div>
             </div>
+        </section>
+
+        <section>
+            <h2>What Our Clients Say</h2>
+            <ul>
+                <li>"The team at JCGV delivered an amazing website for our business!" - Client A</li>
+                <li>"Highly professional and responsive. Would recommend to anyone!" - Client B</li>
+                <li>"Their attention to detail and creativity is unmatched." - Client C</li>
+            </ul>
         </section>
     </main>
 
