--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Web Showcase</h1>
+        <h1>JCGV - Home</h1>
         <nav>
             <ul>
                 <li><a href="/index.html" aria-label="Home">Home</a></li>
