--- a/src/homePage/contact.html
+++ b/src/homePage/contact.html
@@ -31,9 +31,9 @@
         <section>
             <h2>Contact Details</h2>
             <ul>
-                <li>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></li>
+                <li>Email: <a href="mailto:jgomezval@icloud.com">jgomezval@icloud.com</a></li>
                 <li>LinkedIn: <a href="https://www.linkedin.com/camilogomezvalencia" target="_blank">LinkedIn Profile</a></li>
-                <li>GitHub: <a href="https://github.com/yourgithubprofile" target="_blank">GitHub Profile</a></li>
+                <li>GitHub: <a href="https://github.com/fullstacknyc" target="_blank">GitHub Profile</a></li>
             </ul>
         </section>
         <br>
