--- a/src/devGuides/devGuides.html
+++ b/src/devGuides/devGuides.html
@@ -161,7 +161,7 @@
         <h2>Additional Resources</h2>
         <ul>
             <li>Use <a href="https://leetcode.com/problems/create-hello-world-function/description/?envType=study-plan-v2&envId=30-days-of-javascript" target="_blank">Leetcode</a> and <a href="https://www.freecodecamp.org/learn/full-stack-developer/">freeCodeCamp</a> for learning.</li>
-            <li>Watch <a href="https://www.youtube.com/watch?v=TG6XSFeOT3g">programmers</a>, and <a href="https://www.youtube.com/watch?v=erEgovG9WBs">get the gist of web development</a>.</li>
+            <li>Watch <a href="https://www.youtube.com/watch?v=TG6XSFeOT3g">programmers</a>, and get the<a href="https://www.youtube.com/watch?v=erEgovG9WBs"> gist</a>of <a href="https://roadmap.sh/full-stack" target="_blank">web development.</a></li>
             <li>Style with <a href="https://getbootstrap.com/" target="_blank">bootstrap</a>. Goal is <a href="https://www.rayraylab.com/" target="_blank">to make websites like this!</a></li>
         </ul>
     </section>
